@@ -298,6 +298,7 @@ JGLOBAL_ROOT="Root"
 JGLOBAL_ROOT_PARENT="- No parent -"
 JGLOBAL_RIGHT="Right"
 JGLOBAL_SELECT="Select"
+JGLOBAL_SELECT_ALLOW_DENY_GROUP="Change %s permission for %s group."
 JGLOBAL_SHOW_AUTHOR_DESC="If set to Show, the Name of the article's Author will be displayed.  This a global setting but can be changed at the Category, Menu and Article levels."
 JGLOBAL_SHOW_AUTHOR_LABEL="Show Author"
 JGLOBAL_SHOW_CATEGORY_DESC="If set to Show, the title of the article&rsquo;s category will show."
