@@ -74,7 +74,7 @@ CONTENT_XREFERENCE_LABEL="External Reference"
 
 CONTENT_FIELDSET_METADATA="Metadata Options"
 CONTENT_FIELDSET_PUBLISHING="Publishing Details"
-CONTENT_FIELDSET_ACCESS="Article Access Rules"
+CONTENT_FIELDSET_RULES="Article Permissions"
 
 CONTENT_ARTICLETEXT_LABEL="Article Text"
 CONTENT_ARTICLETEXT_DESC="CONTENT_ARTICLETEXT_DESC"
