@@ -77,11 +77,13 @@ abstract class JHtmlRules
 
 		foreach ($actions as $action)
 		{
-			$html[] = '		<dt><a href="#">'.JText::_($action->title).'</a></dt>';
+			$actionTitle = JText::_($action->title);
+			$actionDesc	= JText::_($action->description);
+			$html[] = '		<dt><a href="#">'.$actionTitle.'</a></dt>';
 			$html[] = '		<dd>';
-			$html[] = '			<p>'.JText::_($action->description).'</p>';
-			$html[] = '			<table class="aclmodify-table" summary="'.JText::_($action->description).'">';
-			$html[] = '			<caption>'.JText::_('JLIB_HTML_ACCESS_MODIFY_DESC_CAPTION_ACL').' '.JText::_($action->title).' '.JText::_('JLIB_HTML_ACCESS_MODIFY_DESC_CAPTION_TABLE').'</caption>';
+			$html[] = '			<p>'.$actionDesc.'</p>';
+			$html[] = '			<table class="aclmodify-table" summary="'.$actionDesc.'">';
+			$html[] = '			<caption>'.JText::_('JLIB_HTML_ACCESS_MODIFY_DESC_CAPTION_ACL').' '.$actionTitle.' '.JText::_('JLIB_HTML_ACCESS_MODIFY_DESC_CAPTION_TABLE').'</caption>';
 			$html[] = '			<tr>';
 			$html[] = '				<th class="col1 hidelabeltxt">'.JText::_('JGROUPS').'</th>';
 			$html[] = '				<th class="col2">'.JText::_('JINHERIT').'</th>';
@@ -97,7 +99,7 @@ abstract class JHtmlRules
 				$html[] = '				<td class="col1">'.$group->text.'</td>';
 				$html[] = '				<td class="col2">'.($inheriting->allow($action->name, $group->identities) ? $images['allow-i'] : $images['deny-i']).'</td>';
 				$html[] = '				<td class="col3">';
-				$html[] = '					<select id="'.$idPrefix.'_'.$action->name.'_'.$group->value.'" class="inputbox" size="1" name="'.$control.'['.$action->name.']['.$group->value.']" title="'.JText::_('JMODIFY')." ".$group->text.'">';
+				$html[] = '					<select id="'.$idPrefix.'_'.$action->name.'_'.$group->value.'" class="inputbox" size="1" name="'.$control.'['.$action->name.']['.$group->value.']" title="'.JText::sprintf('JGLOBAL_SELECT_ALLOW_DENY_GROUP', $actionTitle, $group->text).'">';
 				$html[] = '						<option value=""'.($selected === null ? ' selected="selected"' : '').'>'.JText::_('JINHERIT').'</option>';
 				$html[] = '						<option value="1"'.($selected === true ? ' selected="selected"' : '').'>'.JText::_('JALLOW').'</option>';
 				$html[] = '						<option value="0"'.($selected === false ? ' selected="selected"' : '').'>'.JText::_('JDENY').'</option>';
